DuPont DevSB/src/objects/Threat_Master__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Angle_NBT__c</fullName>
        <label>Angle_NBT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straight</fullName>
                </value>
                <value>
                    <fullName>Left</fullName>
                </value>
                <value>
                    <fullName>Right</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Angled_Shot__c</fullName>
        <label>Angled Shot</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-60</fullName>
                </value>
                <value>
                    <fullName>-45</fullName>
                </value>
                <value>
                    <fullName>-30</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BFD_Needed__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BFD Needed</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Clay__c</fullName>
        <label>Clay</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Shot__c</fullName>
        <label>Contact Shot</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Level_Joule_NBT__c</fullName>
        <label>Energy Level Joule NBT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>33</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Energy_Level_NBT__c</fullName>
        <label>Energy Level NBT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E1</fullName>
                </value>
                <value>
                    <fullName>E2</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Environmental_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Environmental Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grains__c</fullName>
        <label>Grains</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grams__c</fullName>
        <label>Grams</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ICW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indoor_Outdoor__c</fullName>
        <label>Indoor/ Outdoor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Manual_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>manual testing field used for NBT</description>
        <label>Manual Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Stabs__c</fullName>
        <label>No. Of Stabs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_shots__c</fullName>
        <label>Number of shots</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Penetration_Allowed__c</fullName>
        <label>Penetration Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shooting_Distance__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Shooting Distance</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shooting_Mechanism_Weapon__c</fullName>
        <label>Shooting Mechanism Weapon</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shooting_Mechnism__c</fullName>
        <label>Shooting Mechnism</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Barrel</fullName>
                </value>
                <value>
                    <fullName>Weapon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shot_Locations__c</fullName>
        <label>Shot  Locations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NIJ 0101.04</fullName>
                </value>
                <value>
                    <fullName>NIJ 0101.06</fullName>
                </value>
                <value>
                    <fullName>NIJ 0115.00</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>defines sort order of data as per customer&apos;s sheet</description>
        <label>Sort Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stab_Location__c</fullName>
        <label>Stab Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NIJ 0101.04</fullName>
                </value>
                <value>
                    <fullName>NIJ 0101.06</fullName>
                </value>
                <value>
                    <fullName>NIJ 0115.00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temperature_Testing__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Temperature Testing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Standard_Other_Details__c</fullName>
        <label>Test Standard Other Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Standard__c</fullName>
        <label>Test Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NIJ 0101.04</fullName>
                </value>
                <value>
                    <fullName>NIJ 0101.06</fullName>
                </value>
                <value>
                    <fullName>TR 03/2008: Rev 10/2008</fullName>
                </value>
                <value>
                    <fullName>German Schutzklasse Oct 2008</fullName>
                </value>
                <value>
                    <fullName>CEN prEN ISO 148763/74</fullName>
                </value>
                <value>
                    <fullName>HP White Protoco</fullName>
                </value>
                <value>
                    <fullName>HOSDB 2007</fullName>
                </value>
                <value>
                    <fullName>Russia GOST R 50744-95</fullName>
                </value>
                <value>
                    <fullName>China GA 68</fullName>
                </value>
                <value>
                    <fullName>China GA 141</fullName>
                </value>
                <value>
                    <fullName>China GA 293</fullName>
                </value>
                <value>
                    <fullName>US MIL Standard</fullName>
                </value>
                <value>
                    <fullName>NIJ 0115.00</fullName>
                </value>
                <value>
                    <fullName>STANG 2911</fullName>
                </value>
                <value>
                    <fullName>STANAG 4296</fullName>
                </value>
                <value>
                    <fullName>STANAG 2920</fullName>
                </value>
                <value>
                    <fullName>US MIL 662E</fullName>
                </value>
                <value>
                    <fullName>Impact Test – DIN 4840</fullName>
                </value>
                <value>
                    <fullName>Impact Test – EN 397</fullName>
                </value>
                <value>
                    <fullName>VAPM BSW &amp; VAPM APR 2006: Stand 14-05-2009</fullName>
                </value>
                <value>
                    <fullName>VAPM KDIW 04 &amp; APR 06: Stand 14-05-2009</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threat_ID_iOS__c</fullName>
        <externalId>true</externalId>
        <label>Threat ID iOS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threat_Level__c</fullName>
        <label>Threat Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>KR1</fullName>
                </value>
                <value>
                    <fullName>KR2</fullName>
                </value>
                <value>
                    <fullName>KR3</fullName>
                </value>
                <value>
                    <fullName>W1</fullName>
                </value>
                <value>
                    <fullName>W2</fullName>
                </value>
                <value>
                    <fullName>W3</fullName>
                </value>
                <value>
                    <fullName>W4</fullName>
                </value>
                <value>
                    <fullName>W5</fullName>
                </value>
                <value>
                    <fullName>SP1</fullName>
                </value>
                <value>
                    <fullName>SP2</fullName>
                </value>
                <value>
                    <fullName>SP3</fullName>
                </value>
                <value>
                    <fullName>I1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Threat_Type__c</fullName>
        <label>Threat Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bullet</fullName>
                </value>
                <value>
                    <fullName>Fragment</fullName>
                </value>
                <value>
                    <fullName>NBT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>V50__c</fullName>
        <label>V50</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Velocity_Tolerance_m_s__c</fullName>
        <label>Velocity Tolerance +/- m/s</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Velocity_V50__c</fullName>
        <label>Velocity_V50</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1002</fullName>
                </value>
                <value>
                    <fullName>1023</fullName>
                </value>
                <value>
                    <fullName>1081</fullName>
                </value>
                <value>
                    <fullName>1095</fullName>
                </value>
                <value>
                    <fullName>1384</fullName>
                </value>
                <value>
                    <fullName>325</fullName>
                </value>
                <value>
                    <fullName>347</fullName>
                </value>
                <value>
                    <fullName>350</fullName>
                </value>
                <value>
                    <fullName>354</fullName>
                </value>
                <value>
                    <fullName>375</fullName>
                </value>
                <value>
                    <fullName>387</fullName>
                </value>
                <value>
                    <fullName>396</fullName>
                </value>
                <value>
                    <fullName>402</fullName>
                </value>
                <value>
                    <fullName>404</fullName>
                </value>
                <value>
                    <fullName>410</fullName>
                </value>
                <value>
                    <fullName>429</fullName>
                </value>
                <value>
                    <fullName>438</fullName>
                </value>
                <value>
                    <fullName>440</fullName>
                </value>
                <value>
                    <fullName>446</fullName>
                </value>
                <value>
                    <fullName>451</fullName>
                </value>
                <value>
                    <fullName>457</fullName>
                </value>
                <value>
                    <fullName>473</fullName>
                </value>
                <value>
                    <fullName>480</fullName>
                </value>
                <value>
                    <fullName>484</fullName>
                </value>
                <value>
                    <fullName>490</fullName>
                </value>
                <value>
                    <fullName>493</fullName>
                </value>
                <value>
                    <fullName>495</fullName>
                </value>
                <value>
                    <fullName>506</fullName>
                </value>
                <value>
                    <fullName>528</fullName>
                </value>
                <value>
                    <fullName>567</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Velocity__c</fullName>
        <defaultValue>0.0</defaultValue>
        <label>Velocity</label>
        <precision>15</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weapon__c</fullName>
        <label>Weapon</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wet_Testing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wet Testing</label>
        <type>Checkbox</type>
    </fields>
    <label>BA Threat Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Threat_Type__c</columns>
        <columns>NAME</columns>
        <columns>Velocity_V50__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Threat Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA Threats Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>